src/objects/PF_Tasks__c.object
<CustomObject>
    <description>pForce</description>
    <fields>
        <fullName>Functionality__c</fullName>
        <label>Functionality</label>
        <referenceTo>Functionality__c</referenceTo>
        <relationshipLabel>Work Tasks</relationshipLabel>
        <relationshipName>Work_Tasks</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PF_Actual_End_Date__c</fullName>
        <label>Actual End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PF_Actual_Hours__c</fullName>
        <label>Actual Hours</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PF_Actual_Start_Date__c</fullName>
        <label>Actual Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PF_Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Work_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PF_Calculated_Estimated_Hours__c</fullName>
        <formula>IF( And (ISPICKVAL(PF_Work_Type__c,&apos;Configuration&apos;), ISPICKVAL( PF_Complexity__c , &apos;Simple&apos;)) , 10, 
 IF( And (ISPICKVAL(PF_Work_Type__c,&apos;Configuration&apos;), ISPICKVAL( PF_Complexity__c , &apos;Medium&apos;)) , 20,
 IF( And (ISPICKVAL(PF_Work_Type__c,&apos;Configuration&apos;), ISPICKVAL( PF_Complexity__c , &apos;Complex&apos;)) , 40,
 IF( And (ISPICKVAL(PF_Work_Type__c,&apos;VF Page/Component&apos;), ISPICKVAL( PF_Complexity__c ,&apos;Simple&apos;)) , 28,
 IF( And (ISPICKVAL(PF_Work_Type__c,&apos;VF Page/Component&apos;), ISPICKVAL( PF_Complexity__c ,&apos;Medium&apos;)) , 50,
 IF( And (ISPICKVAL(PF_Work_Type__c,&apos;VF Page/Component&apos;), ISPICKVAL( PF_Complexity__c ,&apos;Complex&apos;)) , 100,
 IF( And (ISPICKVAL(PF_Work_Type__c,&apos;Apex Class&apos;), ISPICKVAL( PF_Complexity__c , &apos;Simple&apos;)) , 30,
 IF( And (ISPICKVAL(PF_Work_Type__c,&apos;Apex Class&apos;), ISPICKVAL( PF_Complexity__c , &apos;Medium&apos;)) , 44,
 IF( And (ISPICKVAL(PF_Work_Type__c,&apos;Apex Class&apos;), ISPICKVAL( PF_Complexity__c , &apos;Complex&apos;)) , 80,
 IF( And (ISPICKVAL(PF_Work_Type__c,&apos;Web services/Apex call outs&apos;),ISPICKVAL( PF_Complexity__c , &apos;Simple&apos;)) , 34,
 IF( And (ISPICKVAL(PF_Work_Type__c,&apos;Web services/Apex call outs&apos;),ISPICKVAL( PF_Complexity__c , &apos;Medium&apos;)) , 56,
 IF( And (ISPICKVAL(PF_Work_Type__c,&apos;Web services/Apex call outs&apos;),ISPICKVAL( PF_Complexity__c , &apos;Complex&apos;)) ,100,
 IF( And (ISPICKVAL(PF_Work_Type__c,&apos;Trigger/Trigger helper&apos;),ISPICKVAL( PF_Complexity__c , &apos;Simple&apos;)) , 18,
 IF( And (ISPICKVAL(PF_Work_Type__c,&apos;Trigger/Trigger helper&apos;),ISPICKVAL( PF_Complexity__c , &apos;Medium&apos;)) , 36,
 IF( And (ISPICKVAL(PF_Work_Type__c,&apos;Trigger/Trigger helper&apos;),ISPICKVAL( PF_Complexity__c , &apos;Complex&apos;)) , 88,
 IF( And (ISPICKVAL(PF_Work_Type__c,&apos;Data Migration&apos;),ISPICKVAL( PF_Complexity__c , &apos;Simple&apos;)) , 72,
 IF( And (ISPICKVAL(PF_Work_Type__c,&apos;Data Migration&apos;),ISPICKVAL( PF_Complexity__c , &apos;Medium&apos;)) , 136,
 IF( And (ISPICKVAL(PF_Work_Type__c,&apos;Data Migration&apos;),ISPICKVAL( PF_Complexity__c , &apos;Complex&apos;)) , 418,
 IF( And (ISPICKVAL(PF_Work_Type__c,&apos;Integration&apos;),ISPICKVAL( PF_Complexity__c , &apos;Simple&apos;)) , 20,
 IF( And (ISPICKVAL(PF_Work_Type__c,&apos;Integration&apos;),ISPICKVAL( PF_Complexity__c , &apos;Medium&apos;)) , 84,
 IF( And (ISPICKVAL(PF_Work_Type__c,&apos;Integration&apos;),ISPICKVAL( PF_Complexity__c , &apos;Complex&apos;)) , 152,
 IF( And (ISPICKVAL(PF_Work_Type__c,&apos;Reporting &amp; Visualization&apos;),ISPICKVAL( PF_Complexity__c , &apos;Simple&apos;)) , 5,
 IF( And (ISPICKVAL(PF_Work_Type__c,&apos;Reporting &amp; Visualization&apos;),ISPICKVAL( PF_Complexity__c , &apos;Medium&apos;)) , 11,
 IF( And (ISPICKVAL(PF_Work_Type__c,&apos;Reporting &amp; Visualization&apos;),ISPICKVAL( PF_Complexity__c , &apos;Complex&apos;)) , 30,
 IF( And (ISPICKVAL(PF_Work_Type__c,&apos;UI Development&apos;),ISPICKVAL( PF_Complexity__c , &apos;Simple&apos;)) , 80,
 IF( And (ISPICKVAL(PF_Work_Type__c,&apos;UI Development&apos;),ISPICKVAL( PF_Complexity__c , &apos;Medium&apos;)) , 120,
 IF( And (ISPICKVAL(PF_Work_Type__c,&apos;UI Development&apos;),ISPICKVAL( PF_Complexity__c , &apos;Complex&apos;)) , 220,
 IF( And (ISPICKVAL(PF_Work_Type__c,&apos;UX Design&apos;),ISPICKVAL( PF_Complexity__c , &apos;Simple&apos;)) , 60,
 IF( And (ISPICKVAL(PF_Work_Type__c,&apos;UX Design&apos;),ISPICKVAL( PF_Complexity__c , &apos;Medium&apos;)) , 120,
 IF( And (ISPICKVAL(PF_Work_Type__c,&apos;UX Design&apos;),ISPICKVAL( PF_Complexity__c , &apos;Complex&apos;)) , 220,
 IF( ISPICKVAL( PF_Work_Type__c, &apos;Other&apos;) , PF_Estimate_Hours__c,0)))))))))))))))))))))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calculated Estimated Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PF_Complexity__c</fullName>
        <label>Complexity</label>
        <picklist>
            <picklistValues>
                <fullName>Complex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Simple</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PF_Detailed_Description__c</fullName>
        <label>Detailed Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>PF_Estimate_Hours__c</fullName>
        <label>Estimated Hours</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PF_Moved_to_P__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Moved to PROD?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PF_Moved_to_QA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Moved to QA?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PF_Planned_End_Date__c</fullName>
        <label>Planned End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PF_Planned_Start_Date__c</fullName>
        <label>Planned Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PF_Priority__c</fullName>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PF_Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>1-New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2-Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3-Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4-Build</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5-Dev Completed -Ready for Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6-Test</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7-UAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blocked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deferred</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PF_Task_Summary__c</fullName>
        <label>Task Summary</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PF_Unit_testing_completed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This flag indicates that Unit testing corresponding to task is completed.</description>
        <inlineHelpText>Is Unit testing completed for this task ?</inlineHelpText>
        <label>Unit testing completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PF_Work_Type__c</fullName>
        <label>Work Type</label>
        <picklist>
            <picklistValues>
                <fullName>Apex Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Configuration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Migration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reporting &amp; Visualization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trigger/Trigger helper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UI Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UX Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VF Page/Component</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web services/Apex call outs</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Release__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Release</label>
        <referenceTo>PF_Release__c</referenceTo>
        <relationshipLabel>Work Tasks</relationshipLabel>
        <relationshipName>Work_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Work Task</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>PF_Detailed_Description__c</columns>
        <columns>PF_Task_Summary__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>TSK-{00000}</displayFormat>
        <label>Task Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work Tasks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>OtherComplexity</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL( PF_Complexity__c , &apos;Other&apos;)  &amp;&amp; ISBLANK( PF_Estimate_Hours__c )</errorConditionFormula>
        <errorMessage>Please enter &quot;Estimate Hours (When Complexity = Other)&quot; when Complexity is other.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Start_End_date_check</fullName>
        <active>true</active>
        <description>Start date cannot be greater than End date</description>
        <errorConditionFormula>(PF_Actual_Start_Date__c &gt; PF_Actual_End_Date__c) ||
(PF_Planned_Start_Date__c &gt; PF_Planned_End_Date__c)</errorConditionFormula>
        <errorMessage>Planned/Actual Start date cannot be greater than End date</errorMessage>
    </validationRules>
</CustomObject>